WIP fixing DB query

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:name=".AddBeerActivity"
             android:label="@string/title_activity_add_beer" >
         </activity>
+        <activity
+            android:name=".BeerListActivity"
+            android:label="@string/title_activity_beer_list" >
+        </activity>
     </application>
 
 </manifest>
